fixes bug 143821 "Trunk M1RC2 crashes with bad connection [@ nsHttpHandler::ReclaimConnection]" r=kaie sr=jag